infrastructure/controllers/gateway.yml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: traefik
  namespace: infrastructure
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  gatewayClassName: traefik
  listeners:    
    # internal
    - name: internal-https
      hostname: "replaced.by.env"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
      allowedRoutes:
        namespaces:
          from: All
    # external
    - name: external-https
      hostname: "*.${domain}"
      port: 444
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: ${domain}
      allowedRoutes:
        namespaces:
          from: All
